# cailyncodes.github.io

./: .cspell.json  .gitignore  404.html  AGENTS.md  CNAME  _config.yml  about.md  index.html  main.py  not-found.html  package-lock.json  package.json  projects.md  pyproject.toml  resume.html  sanity.json  secret.html  tailwind.config.js  test.json  tsconfig.json
.sass-cache/09abdc6a714e7ee27f49afbee69f07bb1e0a85e0/: _box.scssc  _button.scssc  _contact-method.scssc  _form.scssc  _icon.scssc  _image.scssc  _list.scssc  _table.scssc
_includes/: contact.html  footer.html  head.html  tiles.html
_layouts/: home.html  landing.html  page.html
_sass/layout/: _banner.scss  (+1 more)
_site/: 404.html  about.html  all_posts.html  index.html  resume.html
coming soon/: index1.html
components/: About.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx
content/: about.md  contact.md  header.md  home-about.md  home-intro.md  home-projects.md  home-reading.md  home-writing.md  projects.md  reading.md  writing.md
css/: main.css  style.css  uneeded-style.css
demo/: demo.html
essaying-culture/: story.html
js/: custom.js  jquery.isotope.js
layout/: default.html  home.html  project.html  reading.html  writing.html
old/: _config.yml  all_posts.md  index.md  projects.md
pages/: _app.tsx  index.tsx
scripts/: content-generator.lib.mjs  generate-projects.mjs  generate-readings.mjs  generate-writings.mjs  prerender.mjs
styles/: globals.css
templates/: home-projects.md  home-reading.md  home-writing.md  projects.md  reading.md  writing.md
tests/: prerender-paths.test.mjs
(+54 files in other folders)
