[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cailyncodes-github-io"
version = "1.0.0"
description = "Personal website for Cailyn Hansen"
readme = "README.md"
dependencies = [
    "flask>=3.1.2",
]

[tool.setuptools]
packages = []
py-modules = []
