[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cailyncodes-github-io"
version = "1.0.0"
description = "Personal website for Cailyn Hansen"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
]

[tool.setuptools.packages.find]
# Only discover code inside these paths (adjust to your real package)
where = ["."]
exclude = ["assets*", "layout*", "content*", "node_modules*"]